# example-reified-bindings

./: README.md  example-reified-bindings.cabal  stack.yaml
executables/: Main.hs
sources/: ReifiedBindings.hs
sources/ReifiedBindings/: Example.hs  Extra.hs  Types.hs
