name:                example-reified-bindings
version:             0.0.0
synopsis:            TODO
description:         TODO
homepage:            http://github.com/sboosali/example-reified-bindings#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2016 Spiros Boosalis
category:            TODO
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/sboosali/example-reified-bindings


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:
  -Wall
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities
  -fno-warn-unticked-promoted-constructors
 default-extensions: AutoDeriveTypeable

 exposed-modules:
                 ReifiedBindings.Example

 build-depends:
               base >=4.7 && <5

             , reified-bindings


executable example-reified-bindings
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall

 build-depends:
    base
  , example-reified-bindings
